--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -8,6 +8,10 @@ fstrim_timer_enabled: true
 cpupower_start_governor: "{{ 'schedutil' if inventory_hostname == 'theia' else 'powersave' }}"
 cpupower_stop_governor: "{{ cpupower_start_governor }}"
 
+cadvisor_port: 9101
+cadvisor_listen_ip: "{{ host_ips.vm }}"
+prometheus_cadvisor_targets: ["{{ cadvisor_listen_ip }}:{{ cadvisor_port }}"]
+
 nvme_exporter_port: 9998
 nvme_exporter_listen_address: "{{ host_ips.vm }}:{{ nvme_exporter_port }}"
 
