Switch smartctl-exporter to prometheus-community

--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -15,7 +15,7 @@ prometheus_cadvisor_targets: ["{{ cadvisor_listen_ip }}:{{ cadvisor_port }}"]
 nvme_exporter_port: 9998
 nvme_exporter_listen_address: "{{ host_ips.vm }}:{{ nvme_exporter_port }}"
 
-prometheus_smartctl_targets: ["{{ smartctl_exporter_address }}:{{ smartctl_exporter_port }}"]
+prometheus_smartctl_targets: ["{{ smartctl_exporter_listen_address }}"]
 prometheus_nvme_targets: ["{{ nvme_exporter_listen_address }}"]
 
 btrfs_src: "LABEL=DEBIAN-BTRFS"
