--- a/roles/smartctl_exporter/molecule/resources/playbooks/verify.yml
+++ b/roles/smartctl_exporter/molecule/resources/playbooks/verify.yml
@@ -6,10 +6,10 @@
   tasks:
     - name: Ensure exporter is running
       ansible.builtin.uri:
-        url: "http://127.0.0.1:9902/metrics"
+        url: "http://127.0.0.1:9633/metrics"
         return_content: true
       register: res
 
     - name: Ensure we got something
       ansible.builtin.assert:
-        that: "'python_info' in res.content"
+        that: "'smartctl_devices' in res.content"
