--- a/roles/smartctl_exporter/tasks/main.yml
+++ b/roles/smartctl_exporter/tasks/main.yml
@@ -1,5 +1,11 @@
 ---
 
+- name: Remove old exporter
+  ansible.builtin.file:
+    path: "{{ smartctl_exporter_home }}"
+    state: absent
+  tags: ["remove"]
+
 - name: Include installation tasks
   ansible.builtin.include_tasks:
     file: install.yml
