Disable MS01 for now
Need to test stability properly first.
Reverts 51ef6cfb16fcd0d302745a0ffbc43b5ce8ccceb3 and cf5da29def9500e4a9e850fbdac291d31c5bbbd6

--- a/inventory/group_vars/ms01/vars.yml
+++ b/inventory/group_vars/ms01/vars.yml
@@ -8,3 +8,6 @@ __mt_dns_entries_host:
     address: "{{ host_ips.vpro }}"
 
 grub_cmdline_group: "console=tty0 console=ttyS4,115200n8"
+
+# Remove once all hosts are expected to be up all the time
+prometheus_ignore_down: true
