Add WOL playbook

--- a/inventory/group_vars/kvm_hv/vars.yml
+++ b/inventory/group_vars/kvm_hv/vars.yml
@@ -85,3 +85,5 @@ __group_common_packages:
   - wget
   - which
   - zsh
+
+wol_address: "{{ lookup('community.general.passwordstore', 'wol/' + inventory_hostname) }}"
