--- a/inventory/host_vars/desktop/vars.yml
+++ b/inventory/host_vars/desktop/vars.yml
@@ -24,3 +24,6 @@ sddm_dpi: 144
 host_nic_names:
   - wlan0
   - enp42s0
+
+wol_host: "rb5009"
+wol_address: "{{ lookup('community.general.passwordstore', 'wol/' + inventory_hostname) }}"
