--- a/inventory/group_vars/ms01/networkd.yml
+++ b/inventory/group_vars/ms01/networkd.yml
@@ -1,12 +1,13 @@
 ---
 
-__bond0_primary_iface: "enp2s0f1np1"
-__bond0_backup_iface: "enp87s0"
+# Adding a PCIe card adds +1 to all NICs, i.e. enp87s0 -> enp88s0
+__bond0_primary_iface: "enp3s0f1np1"
+__bond0_backup_iface: "enp88s0"
 # Force vPro interface to always be up, if it's down it's impossible to connect with AMT
 __networkd_group_configs:
   vpro: |
     [Match]
-    Name=enp89s0
+    Name=enp90s0
 
     [Link]
     RequiredForOnline=no
