--- a/inventory/group_vars/kube_common/vars.yml
+++ b/inventory/group_vars/kube_common/vars.yml
@@ -22,7 +22,7 @@ node_labels: >-
   {%- if host_subnet == 'worker' -%}
   {{- tmp.update({"node-role.kubernetes.io/worker": ""}) -}}
   {%- endif -%}
-  {%- if vm_mdev_uuids -%}
+  {%- if vm_pci_devices -%}
   {{- tmp.update({"intel.feature.node.kubernetes.io/gpu": "true"}) -}}
   {%- endif -%}
   {{ tmp }}
@@ -38,6 +38,7 @@ alertmanager_template_files: >-
 prometheus_blackbox_icmp_targets: []
 prometheus_node_targets: []
 
+intel_gpu_operator_installed: false
 kube_proxy_enabled: "{{ (talos_kubeproxy_enabled | default(true)) or (not calico_bpf_enabled | default(false)) }}"
 kube_api_server: "{{ domain }}"
 kube_ingress_domain: "{{ domain }}"
