--- a/tasks/kube.yml
+++ b/tasks/kube.yml
@@ -188,7 +188,7 @@
 # https://intel.github.io/intel-device-plugins-for-kubernetes/INSTALL.html
 - name: Intel GPU tasks
   tags: ["gpu"]
-  when: ansible_play_hosts | map('extract', hostvars, 'vm_mdev_uuids') | flatten
+  when: intel_gpu_operator_installed
   block:
     - name: Add NFD Helm repo
       kubernetes.core.helm_repository:
