Add NFS for Talos

--- a/inventory/host_vars/theia/vars.yml
+++ b/inventory/host_vars/theia/vars.yml
@@ -12,6 +12,7 @@ btrfs_subvols:
   - "@/var/lib/libvirt/images"
   - "@home/{{ my_user }}"
   - "@/mnt/containers"
+  - "@/mnt/kube"
 
 btrfs_scrub_targets:
   - /
