--- a/inventory/host_vars/theia/nfs.yml
+++ b/inventory/host_vars/theia/nfs.yml
@@ -35,3 +35,10 @@ nfs_shares:
   - path: /mnt/tank/downloads
     options: "rw,no_root_squash,no_subtree_check"
     sources: "{{ subnets.vm.docker }}"
+  # Kubernetes shares
+  - path: /mnt/tank/yes
+    options: "ro,no_root_squash,no_subtree_check"
+    sources: "{{ subnets.san.talos }}"
+  - path: /mnt/kube
+    options: "rw,no_root_squash,no_subtree_check"
+    sources: "{{ subnets.san.talos }}"
